Add some useful checks on the model. The most important thing here is that Kontact now doesn't crash when a module is unloaded, even if it is the current one which is loaded. The most important change in here is the deleteLater(), which will delete the plugin after the model has been updated and the model won't try to access to an invalid pointer.

BUG: 163442

svn path=/trunk/KDE/kdepim/kontact/src/; revision=818811